# futuapi-rs

./: Cargo.toml  README.md  build.rs
examples/: get_history_order_list.rs  get_max_trd_qtys.rs  get_user_security.rs  ipo.rs  modify_user_security.rs  place_order.rs  price_reminder.rs  security_snapshot.rs  stock_filter.rs  subscribe.rs
src/: client.rs  connection.rs  frame.rs  lib.rs
src/action/: common.rs  global_state.rs  history_k_l.rs  history_order_list.rs  init_connect.rs  ipo.rs  keepalive.rs  max_trd_qtys.rs  mod.rs  plate_security.rs  position_list.rs  security_snapshot.rs  stock_filter.rs  subscribe.rs  unlock.rs
src/action/basic_qot/: get.rs  update.rs
src/action/kl/: update.rs
src/action/order/: mod.rs  modify.rs  place.rs
src/action/price_reminder/: get.rs  set.rs
src/action/rt/: update.rs
src/action/user_security/: get.rs  modify.rs
src/action/user_security_group/: get.rs  mod.rs  modify.rs
