[package]
name = "futuapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3"
protobuf-json-mapping = "3"
rust-crypto = "0.2"
bytes = "1.1"
byteorder = "1.4.3"
atomic-counter = "1.0.1"
lazy_static = "1.4.0"

[build-dependencies]
protobuf-codegen = "3"
